refactor: move code to center card to the app component

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,9 @@ body {
   background-color: #D5E1EF;
   height: 100%;
 }
+
+.container{
+  display: flex;
+  align-items: center;
+  height: 100vh;
+}
