--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
-  background-color: #D5E1EF;
+  background-color: var(--slate-300);
   height: 100%;
 }
 
-.container{
+.container {
   display: flex;
   align-items: center;
   height: 100vh;
