--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   margin: 0 auto;
   border-radius: 1.25rem;
-  max-width: 320px;
+  max-width: calc(320rem / 16);
   background-color: #ffffff;
   box-shadow: 5px 5px 20px -5px #a7b0bb;
 }
