--- a/src/components/CardContent.module.css
+++ b/src/components/CardContent.module.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
 .sub-heading {
   text-align: center;
-  font-family: "Outfit";
+  font-family: "Outfit", sans-serif;
   font-weight: 700;
   font-size: calc(22rem / 16);
   line-height: 120%;
-  letter-spacing: 0px;
-  color: #1F314F;
-  margin-top: 10px;
-  margin-bottom: 16px;
+  letter-spacing: 0;
+  color: var(--slate-900);
+  margin-top: calc(10rem / 16);
+  margin-bottom: calc(16rem / 16);
 }
 
 .description {
@@ -19,7 +19,7 @@
   font-size: calc(15rem / 16);
   line-height: 140%;
   letter-spacing: 0.2px;
-  color: #68778D;
-  margin-top: 0px;
-  margin-bottom: 40px
+  color: var(--slate-500);
+  margin-top: 0;
+  margin-bottom: calc(40rem / 16);
 }
